--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <a href="./portfolio.html" class="nav-link text-light">Portfolio</a>
                             </li>
                             <li class="nav-item-active">
-                                <a href="" class="nav-link text-light">Veille technologique</a>
+                                <a href="./veille-techno.html" class="nav-link text-light">Veille technologique</a>
                             </li>
                             <li class="nav-item-active">
                                 <a href="" class="nav-link text-light">Contact</a>
@@ -114,7 +114,7 @@
                         Je vous invite donc à consulter ma page dédiée à ma veille technologique sur laquelle je vous présenterai celle-ci, je vous présenterai également comment je
                         continue cette veille dans le temps.
                     </p>
-                    <a href="#" class="btn btn-dark ms-4">En savoir plus</a>
+                    <a href="./veille-techno.html" class="btn btn-dark ms-4">En savoir plus</a>
                 </div>
             </div>
         </div>
