--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
                                 <a href="./portfolio.html" class="nav-link text-light">Portfolio</a>
                             </li>
                             <li class="nav-item-active">
-                                <a href="" class="nav-link text-light">Veille technologique</a>
+                                <a href="./veille-techno.html" class="nav-link text-light">Veille technologique</a>
                             </li>
                             <li class="nav-item-active">
                                 <a href="" class="nav-link text-light">Contact</a>
@@ -113,7 +113,7 @@
     <div class="container py-5">
         <div class="row gy-4 align-items-center">
           <div class="col-12 col-md-4">
-            <a class="navbar-brand text-dark text-uppercase fw-bold" href="./index.html">
+            <a class="navbar-brand text-dark text-uppercase fw-bold" href="#">
               <span class="bg-white bg-gradient p-1 rounded-3 text-dark">Justin</span><span class="text-light"> Tene</span>
             </a>
           </div>
@@ -140,6 +140,7 @@
         </div>
       </div>
   </footer>
+  <script src="https://kit.fontawesome.com/24732f1b21.js" crossorigin="anonymous"></script>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
