--- a/aboutMe.html
+++ b/aboutMe.html
@@ -38,7 +38,7 @@
                                 <a href="./portfolio.html" class="nav-link text-light">Portfolio</a>
                             </li>
                             <li class="nav-item-active">
-                                <a href="" class="nav-link text-light">Veille technologique</a>
+                                <a href="./veille-techno.html" class="nav-link text-light">Veille technologique</a>
                             </li>
                             <li class="nav-item-active">
                                 <a href="" class="nav-link text-light">Contact</a>
