--- a/aboutMe.html
+++ b/aboutMe.html
@@ -41,7 +41,7 @@
                                 <a href="./veille-techno.html" class="nav-link text-light">Veille technologique</a>
                             </li>
                             <li class="nav-item-active">
-                                <a href="" class="nav-link text-light">Contact</a>
+                                <a href="./contact.html" class="nav-link text-light">Contact</a>
                             </li>
                         </ul>
                     </div>
