--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <div class="row">
             <nav class="navbar navbar-dark navbar-expand-md fixed-top bg-dark">
                 <div class="container">
-                    <a href="#" class="navbar-brand text-uppercase fw-bold">
+                    <a href="./index.html" class="navbar-brand text-uppercase fw-bold">
                         <span class="bg-white bg-gradient p-1 rounded-3 text-dark">Justin</span><span class="text-light">  Tene</span>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,64 +51,28 @@
     </div>
   </header>
   <main>
-    <section class="my-5 bg-light">
-        <div class="container bg-light">
+    <section class="my-5">
+        <div class="container py-5">
             <div class="row align-items-center">
-                <h2 class="text-center display-3 fw-bold my-5">Mes Projets PPE</h2>
-            </div>
-            <div class="row align-items-center rounded-3 bg-white">
-                <div class="col-5 col-md-5">
-                    <img src="img/Capture d'écran 2023-04-01 223556.png" alt="" class="rounded-3 my-3" width="100%">
+                <div class="col-12 py-5 my-5">
+                    <form action="https://formspree.io/f/mdovpokk" method="POST">
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" name="email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="message"></textarea>
+                        </div>
+                        <button class="btn btn-dark" type="submit">Envoyer</button>
+                    </form>
                 </div>
-                <div class="col-7 col-md-7">
-                    <h3 class="display-5 fw-bold">M2LFormation</h3>
-                    <p>
-                        Ce projet est une application client léger de gestions des formations des employés. Il fallait qu'elle sois déployable sur le serveur web intranet 
-                        de l'entreprise. Pour ce faire j'ai développé l'application en PHP avec une base de données MySQL.
-                    </p>
-                    <a href="https://github.com/tenjustin/PPEm2lFormation" class="btn btn-dark" target="_blank">Github</a>
-                    <a href="" class="btn btn-dark">Documentation</a>
-                </div>
-            </div>
-            <div class="row align-items-center rounded-3 bg-light my-5">
-                <div class="col-7 col-md-7">
-                    <h3 class="display-5 fw-bold">StockManager</h3>
-                    <p>
-                        Ce projet est une application client lourd de gestions des stocks pour une petite épicerie. Il fallait que l'application puisse tourner
-                        en local sur l'ordinateur disponible dans la pièce dédié au stock de l'épicerie. Pour ce faire j'ai décidé de développer une application 
-                        simple en C# avec une base de données locale Microsoft SQL Server.
-                    </p>
-                    <a href="https://github.com/tenjustin/GestionStockPPE" class="btn btn-dark" target="_blank">Github</a>
-                    <a href="" class="btn btn-dark">Documentation</a>
-                </div>
-                <div class="col-5 col-md-5">
-                    <img src="img/Capture d'écran 2023-04-01 223948.png" alt="" class="rounded-3 my-3" width="100%">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="container">
-            <div class="row align-items-center my-5">
-                <h2 class="display-3 fw-bold text-center">Mes autres projets</h2>
-            </div>
-            <div class="row align-items-center">
-                <div class="col-3 col-md-3"></div>
-                <div class="col-6 col-md-6">
-                    <h3 class="display-5 text-center">Générateur de QR Code</h3>
-                    <p class="text-center">
-                        Ce projet est une application NodeJs pour permettre la création d'un QR code amenant directement sur un produit de la boutique en ligne
-                        de la marque de mon entreprise. Cette application est présente sur le backend de la boutique Shopify.
-                    </p>
-                </div>
-                <div class="col-3 col-md-3"></div>
             </div>
         </div>
     </section>
 
   </main>
-  <footer class="bg-dark">
+  <footer class="bg-dark fixed-bottom">
     <!-- place footer here -->
     <div class="container py-5">
         <div class="row gy-4 align-items-center">
