mention-leg+veilletechno

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>Qui suis-je ?</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -249,7 +249,7 @@
           <div class="col-12 col-md-4 text-md-center">
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="#" class="text-decoration-none text-light">Mentions légales</a>
+                <a href="./mentions-legale.html" class="text-decoration-none text-light">Mentions légales</a>
               </li>
             </ul>
           </div>
