--- a/mentions-legale.html
+++ b/mentions-legale.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Contact</title>
+  <title>Mentions Légales</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -52,32 +52,35 @@
   </header>
   <main>
     <section class="my-5">
-        <div class="container py-5">
+        <div class="container pt-5">
             <div class="row align-items-center">
-                <div class="col-12 py-5 my-5">
-                    <form action="https://formspree.io/f/mdovpokk" method="POST">
-                        <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" name="email">
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="message"></textarea>
-                        </div>
-                        <button class="btn btn-dark" type="submit">Envoyer</button>
-                    </form>
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <h2 class="display-4 fw-bold text-center">
+                        Mentions Légales
+                    </h2>
+                    <p class="display-6 text-center pt-4">Identité</p>
+                    <p class="fw-bold">Nom du site web :<span class="fw-normal"> Portfolio Tene Justin</span></p>
+                    <p class="fw-bold">Adresse du site web : <a href="tenjustin.github.io"> <span class="fw-normal">https://tenjustin.github.io</span></a></p>
+                    <br>
+                    <p class="fw-bold">Propriétaire : <span class="fw-normal">TENE Justin</span></p>
+                    <p class="fw-bold">Responsable de publication : <span class="fw-normal">TENE Justin - tene.justin@gmail.com</span></p>
+                    <p class="display-6 text-center">Entrepreneur Individuel</p>
+                    <p>EI TENE Justin - RCS 894900950 - SIRET 89490095000011</p>
+                    <p>06.11.48.89.84 - <a href="mailto:tene.justin@gmail.com">tene.justin@gmail.com</a> - 15 rue Jules Guesde</p>
                 </div>
+                <div class="col-3"></div>
             </div>
         </div>
     </section>
 
   </main>
-  <footer class="bg-dark fixed-bottom">
+  <footer class="fixed-bottom bg-dark">
     <!-- place footer here -->
     <div class="container py-5">
         <div class="row gy-4 align-items-center">
           <div class="col-12 col-md-4">
-            <a class="navbar-brand text-dark text-uppercase fw-bold" href="#">
+            <a class="navbar-brand text-dark text-uppercase fw-bold" href="./index.html">
               <span class="bg-white bg-gradient p-1 rounded-3 text-dark">Justin</span><span class="text-light"> Tene</span>
             </a>
           </div>
