--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>Portfolio</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -101,6 +101,9 @@
                         Ce projet est une application NodeJs pour permettre la création d'un QR code amenant directement sur un produit de la boutique en ligne
                         de la marque de mon entreprise. Cette application est présente sur le backend de la boutique Shopify.
                     </p>
+                    <div class="justify-content-center d-grid gap-2 mx-auto">
+                      <a href="https://github.com/tenjustin/QR-code-shopify-app" class="btn btn-dark mb-5">Github</a>
+                    </div>
                 </div>
                 <div class="col-3 col-md-3"></div>
             </div>
@@ -120,7 +123,7 @@
           <div class="col-12 col-md-4 text-md-center">
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="#" class="text-decoration-none text-light">Mentions légales</a>
+                <a href="./mentions-legale.html" class="text-decoration-none text-light">Mentions légales</a>
               </li>
             </ul>
           </div>
