--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <div class="col-12 col-md-6 py-5">
                     <h2 class="fw-bold">Je suis <b class="fw-bold">Justin Tene,</b> étudiant en BTS SIO option SLAM en alternance et développeur Freelance</h2>
                     <h3 class="fw-light">Je vais à travers ce portfolio me présenter et vous montrer mes projets ainsi que mon évolution durant ces deux années.</h3>
-                    <a href="./aboutMe.html" class="btn btn-dark mt-5">En savoir plus</a>
+                    <a href="./doc/CV_TENE_JUSTIN.pdf" target="_blank" class="btn btn-dark mt-5">Mon CV</a>
+                    <a href="./doc/TabSynthese_TENEJustin.pdf" target="_blank" class="btn btn-dark mt-5">Tableau de Synthèse</a>
                 </div>
                 <div class="col col-12 col-md-6 py-5 px-5 justify-content-center">
                     <img src="img/IMG-3653.jpg" alt="" class="rounded-3" width="100%">
