--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
                         simple en C# avec une base de données locale Microsoft SQL Server.
                     </p>
                     <a href="https://github.com/tenjustin/GestionStockPPE" class="btn btn-dark" target="_blank">Github</a>
-                    <a href="./doc/documentationTechnique-stockmanager.pdf" class="btn btn-dark">Documentation Technique</a>
+                    <a href="./doc/documentationTechnique-stockmanager.pdf" target="_blank" class="btn btn-dark">Documentation Technique</a>
                 </div>
                 <div class="col-5 col-md-5">
                     <img src="img/Capture d'écran 2023-04-01 223948.png" alt="" class="rounded-3 my-3" width="100%">
