--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                         de l'entreprise. Pour ce faire j'ai développé l'application en PHP avec une base de données MySQL.
                     </p>
                     <a href="https://github.com/tenjustin/PPEm2lFormation" class="btn btn-dark" target="_blank">Github</a>
-                    <a href="" class="btn btn-dark">Documentation</a>
+                    <a href="./doc/docTechniqueM2LForm.pdf" class="btn btn-dark" target="_blank">Documentation Technique</a>
                 </div>
             </div>
             <div class="row align-items-center rounded-3 bg-light my-5">
